@@ -1,20 +1,7 @@
-/**
- * Copyright 2017-2025 Fred Feng (paganini.fy@gmail.com)
- * 
- * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
- * in compliance with the License. You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software distributed under the License
- * is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
- * or implied. See the License for the specific language governing permissions and limitations under
- * the License.
- */
 package com.github.fastjpa;
 
 import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.List;
 
 /**
  * 
@@ -25,48 +12,50 @@ import java.util.Arrays;
  */
 public class ColumnList extends ArrayList<Column> {
 
-    private static final long serialVersionUID = 1L;
+    private static final long serialVersionUID = -1066600234659676707L;
 
     public ColumnList() {}
 
     public ColumnList(Column... columns) {
-        addAll(Arrays.asList(columns));
+        super(List.of(columns));
     }
 
-    public ColumnList addColumn(String attributeName) {
-        add(Column.forName(attributeName));
-        return this;
-    }
-
-    public ColumnList addColumns(String[] attributeNames) {
-        if (attributeNames != null) {
+    public ColumnList(String[] attributeNames) {
+        if (attributeNames != null && attributeNames.length > 0) {
             for (String attributeName : attributeNames) {
                 add(Column.forName(attributeName));
             }
         }
-        return this;
     }
 
-    public ColumnList addColumn(String alias, String attributeName) {
-        add(Column.forName(alias, attributeName));
-        return this;
+    @SafeVarargs
+    public <X> ColumnList(SerializedFunction<X, ?>... functions) {
+        if (functions != null && functions.length > 0) {
+            for (SerializedFunction<X, ?> function : functions) {
+                addColumn(function);
+            }
+        }
     }
 
-    public ColumnList addColumns(String alias, String[] attributeNames) {
-        if (attributeNames != null) {
+    @SafeVarargs
+    public ColumnList(Field<?>... fields) {
+        if (fields != null && fields.length > 0) {
+            for (Field<?> field : fields) {
+                addColumn(field, field.toString());
+            }
+        }
+    }
+
+    public ColumnList(String alias, String[] attributeNames) {
+        if (attributeNames != null && attributeNames.length > 0) {
             for (String attributeName : attributeNames) {
                 add(Column.forName(alias, attributeName));
             }
         }
-        return this;
     }
 
-    public <X> ColumnList addColumns(SerializedFunction<X, ?>... functions) {
-        if (functions != null) {
-            for (SerializedFunction<X, ?> function : functions) {
-                add(Column.forName(function, null));
-            }
-        }
+    public ColumnList addColumn(String attributeName) {
+        add(Column.forName(attributeName));
         return this;
     }
 
@@ -80,12 +69,18 @@ public class ColumnList extends ArrayList<Column> {
         return this;
     }
 
-    public ColumnList addColumns(Field<?>... fields) {
-        if (fields != null) {
-            for (Field<?> field : fields) {
-                addColumn(field, field.toString());
-            }
-        }
+    public ColumnList addColumn(String alias, String attributeName) {
+        add(Column.forName(alias, attributeName));
+        return this;
+    }
+
+    public ColumnList addColumn(Column column) {
+        add(column);
+        return this;
+    }
+
+    public <X> ColumnList addColumn(SerializedFunction<X, ?> function) {
+        add(Column.forName(function, null));
         return this;
     }
 
